ui/totalimpact.css
/* ... */
#share {
    clear:both;
}


/* HTML elements */


h3 {
	margin: 0px;
	margin-top:20px;
}

a {
	color: #933;	
}

hr {
	border: 0;
	background-color: #CCC;
	height: 1px;
}

em.url {
	font-style: normal;
	font-size: 90%;
	color: #999;	
}

p.prompt {
	padding: 0em;
	font-size: 1em;    
}

p.howto {
    width: 98%;
    background-color: #EEE;
    color: #666;
    padding: .6em;
    font-size: 110%;
    border: 1px solid #CCC;
    -webkit-border-radius: 4px;    /* CSS3 rounded borders for Safari                    */
    -moz-border-radius: 4px;       /* CSS3 rounded borders for Firefox                   */
    border-radius: 4px;
    text-shadow: 1px 1px 0px #FFF;
    margin-top:0;
    margin-bottom: 30px
}

p.sp {
	margin-top: 2em;	
	margin-bottom: 0;	
}

/* updating page ********************************************************/
h2.loading {
    font-family: 'Lobster Two', 'helvetica', 'arial', sans-serif;
        color: #333;
        font-size: 50px;
        margin: 200px auto;
        width: 800px;
}
h2.loading span {
    display:block;
    font-size: 15px;
    font-family: "Helvetica Neue", "helvetica", 'arial', sans-serif;
}

/* about page ************************************************************/

table {
    border-collapse: collapse;
    padding:2px;
    border-color: #999;
}
td {
    padding: 2px 4px;
    border-color: #ccc;
}

/* home page **************************************************************/

sup {
    display:none; /* hide these for now because they don't work */
}

p#tagline {
  color: #993333;
    font-family: 'Lobster Two',helvetica,arial,sans-serif;
    font-size: 35px;
    font-style: italic;
    font-weight: normal;
    margin: 0 0 10px;
}


/* form elements */

textarea#artifactList {
	width: 98%;
        margin-bottom: 25px;
}

input, textarea {
	border: 1px solid #CCC;	
        background-repeat:  repeat-x;
	background-color: #fff;
}
input {
    width: 60%;
}


button
{

	border: 1px solid #aaa;
	background-color: #eee;
	color: #333;
        margin-top: 2px;
}
p#name-collection {
    float:right;
    width: 35%;
    margin-top: -3px;
}

#enter-ids input#go-button {
    background-color: #933;
    color: #fff;
    font-size: 36px;
    float:right;
    height: 2em;
    width: 100%;
    font-family: 'Lobster Two', 'Helvetica', arial, sans-serif;
    font-style: italic;
    border:1px solid #333;
}


input.FAQ
{
	border-top: none;
	border-left: none;	
	border-bottom: 1px solid #EEE;
	border-right: 1px solid #EEE;
	background-color: grey;		
	color: #FFF;
}

button:hover
{
	background-color: #933;
        border-color:#333;
	color: #FFF;
}

fieldset {
    border: 2px dotted #CCC;
    margin-top:0.5em;

}

legend {
	font-size: 1.2em;
	color: #888;
	padding:0;
}
legend span {
    font-family: 'Lobster Two', helvetica, arial, sans-serif;
    font-style:italic;
    font-size: 80%;
    color: #bbb;

}

/* custom classes */

.disabled { 
    color:grey; /* This property is for the text colour */ 
    }

.entry .id {
	font-size: 8pt;
	padding-left: 18px;
	padding-bottom: 4px;
	
}

.entry .metric_value {
	font-size: 32pt;
	float: left;
	color: #4c4cff;
	padding-left: 18px;
	padding-right: 8px;	
	border-right-style:solid;
}

.entry .metric_info {
	float:left;
	
}
.entry .metric_name {
	padding-top: 3px;
	padding-left: 20px;
	font-size: 12pt;
	
}

.entry .metric_img {
    padding-top: 8px;
	padding-left: 20px;
}
        
        
.section-title {
    background: lightgrey;
	clear:both;
}

.section {
}

div#about_metrics {
	margin-top: 2em;	
	background-color: #EEE;
	padding: 1em 2em 3em 2em;
}
div#twitterfeed {
    margin-top: -513px;
    height:300px;
    clear:both;
    float:right;
    width: 52%;
}

div#footer {
	margin-top: 2em;	
	padding: 1em 2em 3em 2em;
        border-top:4px dotted #ddd;
        text-align: right;
        clear:both;
        color: #aaa;
}




/* report meta *************/


#report h2 {
    text-align:left;
    font-family: 'Lobster Two';
    font-weight: normal;
    font-style: italic;
}
#report h2 span.title {
    font-family: 'helvitica', 'arial', sans-serif;
    font-weight: bold;
    font-style: normal;
    font-size:50px;
    color:#933;
    text-shadow: #ddd 2px 2px 2px;
    margin-left: 10px;
}
#report-meta {
    left: 0;
    margin-left: 371px;
    position: relative;
    top: 41px;
}

span.badge {
    float:left;
    font-size: 75%;
    padding-top:5px;
    margin-left: 10px;
}

 a.report-button  {
    margin-right: 5px;
    margin-bottom: 5px;
    background: #EEE;
    padding: 2px 3px;
    border: 1px solid #CCC;
    -webkit-border-radius: 3px;    /* CSS3 rounded borders for Safari                    */
    -moz-border-radius: 3px;       /* CSS3 rounded borders for Firefox                   */
    border-radius: 3px;
    text-shadow: 1px 1px 0px #FFF;
    font-size: 90%;
    text-decoration: none;
    color: #999;
    display: block;
    height:1.3em;
    padding-left:8px;
    padding-right:8px;
    float:left;
}
a.report-button:hover {
    background: #933;
    color:#fff;
    text-shadow:none;
    text-decoration:none;
}

#share {
    clear:both;
    padding-top:7px;
    float:left;
}

#permalink {
    float:right;
    margin-right: 25px;
}
#permalink a.copyable  {
	margin-top: 3px;
	margin-right: 5px;
	margin-bottom: 3px;
    padding: 2px 3px;
	border: 1px solid #CCC;
    -webkit-border-radius: 3px;    /* CSS3 rounded borders for Safari                    */
    -moz-border-radius: 3px;       /* CSS3 rounded borders for Firefox                   */
    border-radius: 3px;	
	text-shadow: 1px 1px 0px #FFF;	
	font-size: 90%;
	text-decoration: none;
	color: #999;
}
#permalink a#copy-permalink {
    font-size: 75%;
    cursor: pointer;
    color:#999;
    text-decoration: underline;
}
#permalink a#copy-permalink.hover {
    color: #933;
}
#permalink a {
	text-decoration: none;
}
#permalink span.label {
    font-family:'Lobster Two';
    font-style:italic;
    color:#555;
}


.debugging {
	float: right;
	margin-right: .5em;	
}
/* ... */

